Fixed client bugs

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
           Sorry, audio is not supported
         </audio>
         <div class="media-control">
-          <button onclick="rewindAudio(-5)">&#x23ea;</button><button onclick="rewindAudio(5)">&#x23e9;</button>
+          <button title="-5 секунд" onclick="rewindAudio(-5)">&#x23ea;</button>
+          <button title="+5 секунд" onclick="rewindAudio(5)">&#x23e9;</button>
         </div>
       </section>
 
