--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/png" href="favicon.png" />
-  <title>Radio-T audio clipper</title>
+  <title>Radio-T хайлайтер</title>
 </head>
-
 <body>
   <main>
-
-    <h1>Radio-T audio clipper</h1>
+    <h1>Radio-T хайлайтер</h1>
 
     <label class="prompt">
-      Эпизод&nbsp;#
+      <span>Эпизод&nbsp;#</span>
       <input autofocus class="textfield" pattern="\d+" type="text" name="episode" maxlength="3" placeholder="000">
     </label>
 
@@ -62,5 +59,4 @@
 
   <script src="./index.js"></script>
 </body>
-
 </html>
